[gd_scene load_steps=11 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://search.png" type="Texture" id=2]
[ext_resource path="res://menu.png" type="Texture" id=3]
[ext_resource path="res://MagicOwlPersonalUse.tres" type="DynamicFont" id=4]
[ext_resource path="res://scripts/MenuButton2.gd" type="Script" id=5]
[ext_resource path="res://scripts/AddIngredients.gd" type="Script" id=6]
[ext_resource path="res://scripts/SubIngredients.gd" type="Script" id=7]
[ext_resource path="res://scripts/SubSteps.gd" type="Script" id=8]
[ext_resource path="res://scripts/AddSteps.gd" type="Script" id=9]
[ext_resource path="res://scripts/Home.gd" type="Script" id=10]

[node name="CreateNew" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NavBar" type="Panel" parent="."]
margin_left = 16.0
margin_top = 64.0
margin_right = 216.0
margin_bottom = 584.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="NavBar"]
margin_left = 32.0
margin_top = 128.0
margin_right = 164.0
margin_bottom = 389.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Home" type="Button" parent="NavBar/Buttons"]
margin_right = 132.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 4 )
text = "Home"
script = ExtResource( 10 )

[node name="Search" type="Button" parent="NavBar/Buttons"]
margin_top = 53.0
margin_right = 132.0
margin_bottom = 102.0
custom_fonts/font = ExtResource( 4 )
text = "Search"

[node name="Favs" type="Button" parent="NavBar/Buttons"]
margin_top = 106.0
margin_right = 132.0
margin_bottom = 155.0
custom_fonts/font = ExtResource( 4 )
text = "Favorites"

[node name="Categories" type="Button" parent="NavBar/Buttons"]
margin_top = 159.0
margin_right = 132.0
margin_bottom = 208.0
custom_fonts/font = ExtResource( 4 )
text = "Categories"

[node name="Explore" type="Button" parent="NavBar/Buttons"]
margin_top = 212.0
margin_right = 132.0
margin_bottom = 261.0
custom_fonts/font = ExtResource( 4 )
text = "Explore"

[node name="BottomNav" type="VBoxContainer" parent="NavBar"]
margin_left = 16.0
margin_top = 454.0
margin_right = 68.0
margin_bottom = 504.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Account" type="LinkButton" parent="NavBar/BottomNav"]
margin_right = 52.0
margin_bottom = 14.0
focus_mode = 2
text = "Account"

[node name="Support" type="LinkButton" parent="NavBar/BottomNav"]
margin_top = 18.0
margin_right = 52.0
margin_bottom = 32.0
focus_mode = 2
text = "Support"

[node name="FAQ" type="LinkButton" parent="NavBar/BottomNav"]
margin_top = 36.0
margin_right = 52.0
margin_bottom = 50.0
focus_mode = 2
text = "FAQ"

[node name="RecipeManager" type="Panel" parent="."]
margin_left = 232.0
margin_top = 64.0
margin_right = 1008.0
margin_bottom = 584.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Details" type="Label" parent="RecipeManager"]
margin_left = 24.0
margin_top = 24.0
margin_right = 118.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 4 )
text = "Details:"

[node name="Credits" type="Label" parent="RecipeManager"]
margin_left = 600.0
margin_top = 24.0
margin_right = 694.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 4 )
text = "Credits:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="RecipeManager"]
margin_left = 32.0
margin_top = 80.0
margin_right = 72.0
margin_bottom = 94.0
text = "Title"

[node name="TitleEdit" type="LineEdit" parent="RecipeManager/Title"]
margin_top = 24.0
margin_right = 120.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Servings" type="Label" parent="RecipeManager"]
margin_left = 32.0
margin_top = 152.0
margin_right = 72.0
margin_bottom = 166.0
text = "Number of Servings"

[node name="ServingsEdit" type="LineEdit" parent="RecipeManager/Servings"]
margin_top = 29.0
margin_right = 120.0
margin_bottom = 53.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ingredients" type="Label" parent="RecipeManager"]
margin_left = 32.0
margin_top = 224.0
margin_right = 157.0
margin_bottom = 238.0
text = "Ingredients"

[node name="IngredientsVBox" type="VBoxContainer" parent="RecipeManager/Ingredients"]
margin_top = 40.0
margin_right = 120.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IngredientsEdit" type="LineEdit" parent="RecipeManager/Ingredients/IngredientsVBox"]
margin_right = 120.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddIngredients" type="Button" parent="RecipeManager/Ingredients"]
margin_left = 128.0
margin_top = 40.0
margin_right = 148.0
margin_bottom = 61.0
text = "+"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubIngredients" type="Button" parent="RecipeManager/Ingredients"]
margin_left = 160.0
margin_top = 40.0
margin_right = 180.0
margin_bottom = 61.0
text = "-"
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Steps" type="Label" parent="RecipeManager"]
margin_left = 280.0
margin_top = 224.0
margin_right = 405.0
margin_bottom = 238.0
text = "Steps"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StepsVBox" type="VBoxContainer" parent="RecipeManager/Steps"]
margin_top = 40.0
margin_right = 120.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StepsEdit" type="LineEdit" parent="RecipeManager/Steps/StepsVBox"]
margin_right = 120.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddSteps" type="Button" parent="RecipeManager/Steps"]
margin_left = 128.0
margin_top = 40.0
margin_right = 148.0
margin_bottom = 61.0
text = "+"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubSteps" type="Button" parent="RecipeManager/Steps"]
margin_left = 160.0
margin_top = 40.0
margin_right = 180.0
margin_bottom = 61.0
text = "-"
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="RecipeManager"]
margin_left = 280.0
margin_top = 80.0
margin_right = 378.0
margin_bottom = 100.0
text = "Upload Photo"

[node name="Label" type="Label" parent="RecipeManager/Button"]
margin_left = 120.0
margin_right = 221.0
margin_bottom = 14.0
text = "Nothing loaded."

[node name="FirstName" type="Label" parent="RecipeManager"]
margin_left = 600.0
margin_top = 80.0
margin_right = 674.0
margin_bottom = 94.0
text = "First Name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameEdit" type="LineEdit" parent="RecipeManager/FirstName"]
margin_top = 32.0
margin_right = 120.0
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LastName" type="Label" parent="RecipeManager"]
margin_left = 600.0
margin_top = 166.0
margin_right = 672.0
margin_bottom = 180.0
text = "Last Name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameEdit" type="LineEdit" parent="RecipeManager/LastName"]
margin_top = 32.0
margin_right = 120.0
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Email" type="Label" parent="RecipeManager"]
margin_left = 600.0
margin_top = 248.0
margin_right = 672.0
margin_bottom = 262.0
text = "Email:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EmailEdit" type="LineEdit" parent="RecipeManager/Email"]
margin_top = 32.0
margin_right = 120.0
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="RecipeManager"]
margin_left = 480.0
margin_top = 359.0
margin_right = 722.0
margin_bottom = 383.0
text = "Yes, I am 18 years old and above."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Submit" type="Button" parent="RecipeManager"]
margin_left = 536.0
margin_top = 408.0
margin_right = 720.0
margin_bottom = 457.0
custom_fonts/font = ExtResource( 4 )
text = "Submit Recipe"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="Button" parent="."]
margin_left = 32.0
margin_top = 80.0
margin_right = 76.0
margin_bottom = 118.0
icon = ExtResource( 3 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Search" type="LineEdit" parent="."]
margin_left = 712.0
margin_top = 16.0
margin_right = 901.0
margin_bottom = 56.0
placeholder_text = "Search"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SearchButton" type="Button" parent="."]
margin_left = 912.0
margin_top = 16.0
margin_right = 956.0
margin_bottom = 56.0
icon = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="User" type="Sprite" parent="."]
position = Vector2( 988, 36 )
scale = Vector2( 0.625, 0.625 )
texture = ExtResource( 1 )
